cargo_build_errors.txt
arning: use of deprecated function `aws_config::from_env`: Use the `aws_config::defaults` function. If you don't care about future default behavior changes, you can continue to use this function by enabling the `behavior-version-latest` feature. Doing so will make this deprecation notice go away.
  --> crates/dev-backup-storage/src/cloud.rs:33:38
   |
33 |         let sdk_config = aws_config::from_env()
   |                                      ^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: `dev-backup-storage` (lib) generated 1 warning
   Compiling dev-backup v0.1.0 (/home/chuck/tmp/backup_build/crates/dev-backup-cli)
error[E0255]: the name `Command` is defined multiple times
  --> crates/dev-backup-cli/src/main.rs:25:1
   |
12 | use std::process::{Command, Stdio};
   |                    ------- previous import of the type `Command` here
...
25 | enum Command {
   | ^^^^^^^^^^^^ `Command` redefined here
   |
   = note: `Command` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
12 | use std::process::{Command as OtherCommand, Stdio};
   |                            +++++++++++++++

error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> crates/dev-backup-cli/src/main.rs:24:10
   |
24 | #[derive(Subcommand)]
   |          ^^^^^^^^^^
25 | enum Command {
   |      ------- `std::process::Command` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead
   = note: this error originates in the derive macro `Subcommand` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0220]: associated type `Init` not found for `Self`
  --> crates/dev-backup-cli/src/main.rs:26:5
   |
26 |     Init {
   |     ^^^^ there is a similarly named associated type `Int` in the trait `core::num::dec2flt::float::RawFloat`

error[E0220]: associated type `Snapshot` not found for `Self`
  --> crates/dev-backup-cli/src/main.rs:30:5
   |
30 |     Snapshot {
   |     ^^^^^^^^ associated type `Snapshot` not found

error[E0220]: associated type `Artifact` not found for `Self`
  --> crates/dev-backup-cli/src/main.rs:33:5
   |
33 |     Artifact {
   |     ^^^^^^^^ associated type `Artifact` not found

error[E0220]: associated type `Restore` not found for `Self`
  --> crates/dev-backup-cli/src/main.rs:37:5
   |
37 |     Restore {
   |     ^^^^^^^ associated type `Restore` not found

error[E0220]: associated type `Sync` not found for `Self`
  --> crates/dev-backup-cli/src/main.rs:41:5
   |
41 |     Sync {
   |     ^^^^ associated type `Sync` not found

error[E0220]: associated type `Ws` not found for `Self`
  --> crates/dev-backup-cli/src/main.rs:45:5
   |
45 |     Ws {
   |     ^^ associated type `Ws` not found

error[E0220]: associated type `Ls` not found for `Self`
  --> crates/dev-backup-cli/src/main.rs:49:5
   |
49 |     Ls {
   |     ^^ associated type `Ls` not found

error[E0223]: ambiguous associated type
   --> crates/dev-backup-cli/src/main.rs:109:9
    |
109 |         Command::Init { target } => init(&cli.config, target),
    |         ^^^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Init` implemented for `std::process::Command`, you could use the fully-qualified path
    |
109 -         Command::Init { target } => init(&cli.config, target),
109 +         <std::process::Command as Example>::Init { target } => init(&cli.config, target),
    |

error[E0223]: ambiguous associated type
   --> crates/dev-backup-cli/src/main.rs:110:9
    |
110 |         Command::Snapshot { label } => snapshot(&cli.config, &label),
    |         ^^^^^^^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Snapshot` implemented for `std::process::Command`, you could use the fully-qualified path
    |
110 -         Command::Snapshot { label } => snapshot(&cli.config, &label),
110 +         <std::process::Command as Example>::Snapshot { label } => snapshot(&cli.config, &label),
    |

error[E0223]: ambiguous associated type
   --> crates/dev-backup-cli/src/main.rs:111:9
    |
111 |         Command::Artifact { action } => artifact(&cli.config, action),
    |         ^^^^^^^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Artifact` implemented for `std::process::Command`, you could use the fully-qualified path
    |
111 -         Command::Artifact { action } => artifact(&cli.config, action),
111 +         <std::process::Command as Example>::Artifact { action } => artifact(&cli.config, action),
    |

error[E0223]: ambiguous associated type
   --> crates/dev-backup-cli/src/main.rs:112:9
    |
112 |         Command::Restore { action } => restore(&cli.config, action),
    |         ^^^^^^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Restore` implemented for `std::process::Command`, you could use the fully-qualified path
    |
112 -         Command::Restore { action } => restore(&cli.config, action),
112 +         <std::process::Command as Example>::Restore { action } => restore(&cli.config, action),
    |

error[E0223]: ambiguous associated type
   --> crates/dev-backup-cli/src/main.rs:113:9
    |
113 |         Command::Sync { action } => sync(&cli.config, action).await,
    |         ^^^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Sync` implemented for `std::process::Command`, you could use the fully-qualified path
    |
113 -         Command::Sync { action } => sync(&cli.config, action).await,
113 +         <std::process::Command as Example>::Sync { action } => sync(&cli.config, action).await,
    |

error[E0223]: ambiguous associated type
   --> crates/dev-backup-cli/src/main.rs:114:9
    |
114 |         Command::Ws { action } => ws(&cli.config, action).await,
    |         ^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Ws` implemented for `std::process::Command`, you could use the fully-qualified path
    |
114 -         Command::Ws { action } => ws(&cli.config, action).await,
114 +         <std::process::Command as Example>::Ws { action } => ws(&cli.config, action).await,
    |

error[E0223]: ambiguous associated type
   --> crates/dev-backup-cli/src/main.rs:115:9
    |
115 |         Command::Ls { action } => ls(&cli.config, action),
    |         ^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Ls` implemented for `std::process::Command`, you could use the fully-qualified path
    |
115 -         Command::Ls { action } => ls(&cli.config, action),
115 +         <std::process::Command as Example>::Ls { action } => ls(&cli.config, action),
    |

Some errors have detailed explanations: E0117, E0220, E0223, E0255.
For more information about an error, try `rustc --explain E0117`.
error: could not compile `dev-backup` (bin "dev-backup") due to 24 previous errors
[chuck@7510 backup_build | 1768222493 | 175.81]$

